2009-10-28 Frank Kober <goemusic@yahoo.fr>
    * midilfo.cpp: fixed quantization issue with drawn waveforms
    * lfowidget.cpp: deactivate freq amp and offset for custom waveform
    * midilfo.*, lfoscreen.*, lfowidget.*, seqdriver.cpp: remove 
    "lfo..."-particle from variable names where appropriate
     
2009-10-27 Frank Kober <goemusic@yahoo.fr>
    * midilfo.*, lfoscreen.*, lfowidget.*, seqdriver.cpp: 
    custom mouse-drawable LFO waveform added, muting of single waveform
    points added. If custom waveform is selected, the waveform can be
    drawn with the left mouse button. For all waveforms, the right mouse
    button activates/deactivates event generation for the point under 
    the mouse cursor
    * slider.cpp: restore possibility to use Qt:Vertical for sliders
    TODO: store custom waveform somehow, deactivate freq, amp and offset 
    for custom waveform

2009-10-25 Frank Kober <goemusic@yahoo.fr>
    * package: first draft of manpage added
    
2009-10-11 Frank Kober <goemusic@yahoo.fr>
    * obsolete C-headers removed or updated
    * lfowidget.cpp: amplitude slider fixedWidth removed
    
2009-10-11 Guido Scholz <guido.scholz@bayernline.de>
    * mainwindow.*: Obsolete aboutWidget removed.
    * mainwindow.cpp: Sequence of "View" and "Module" menus changed,
    to meet common standards.
    * mainwindow.cpp, arpdata.*, seqdriver.*: Show ALSA client id in
    window title
    * translations/*.ts: Obsolete messages removed
    * arpwidget.cpp: Widget placement by standard layout margins.
    Focus follows tab fixed.
    * groovewidget.cpp: Widget placement by standard layout margins.
    * lfowidget.*: Obsolete header files removed, missing keyboard
    shortcuts added, layout improved
    * slider.*: Layout improved, label member variable removed.

2009-10-10 Frank Kober <goemusic@yahoo.fr>
    * passwidget.*, mainwindow.cpp, seqdriver.cpp: "discard" logic 
    changed to "forward to" to be more intuitive